--- a/.github/workflows/自动部署nezha.yml
+++ b/.github/workflows/自动部署nezha.yml
@@ -224,11 +224,11 @@ jobs:
           echo "DOCKER_IMAGE=${{ secrets.DOCKER_IMAGE }}" >> $GITHUB_ENV
         else
           if [ "${{ github.event.inputs.type }}" = "nezha-v0" ]; then
-            echo "DOCKER_IMAGE=ghcr.io/kejiland/d-nezha:latest" >> $GITHUB_ENV
+            echo "DOCKER_IMAGE=ghcr.io/kejiland/d-nezhav1:latest" >> $GITHUB_ENV
           elif [ "${{ github.event.inputs.type }}" = "nezha-v1" ]; then
             echo "DOCKER_IMAGE=ghcr.io/kejiland/d-nezhav1:latest" >> $GITHUB_ENV
           else 
-            echo "DOCKER_IMAGE=ghcr.io/kejiland/f-nezha:latest" >> $GITHUB_ENV
+            echo "DOCKER_IMAGE=ghcr.io/kejiland/d-nezhav1:latest" >> $GITHUB_ENV
           fi
         fi
         echo "使用API端点: $CF_API"
