--- a/.github/workflows/自动部署Hubproxy到SAP.yml
+++ b/.github/workflows/自动部署Hubproxy到SAP.yml
@@ -50,7 +50,7 @@ on:
         default: ''
 
 env:
-  DOCKER_IMAGE: ${{ secrets.DOCKER_IMAGE || 'eooce/webssh:latest' }}
+  DOCKER_IMAGE: ${{ secrets.DOCKER_IMAGE || 'ghcr.io/eooce/hubproxy:latest' }}
   MEMORY: ${{ secrets.MEMORY || '256M' }}
   DISK: ${{ secrets.DISK || '256M' }}
 
